--- a/src/pages/Homepage/products.css
+++ b/src/pages/Homepage/products.css
@@ -7,13 +7,14 @@ h1 {
 	max-width: 80%;
 	grid-template-columns: repeat(
 		auto-fit,
-		minmax(350px, 1fr)
+		minmax(300px, 1fr)
 	);
 	grid-gap: 1rem;
 	margin: 5rem auto;
 }
 
 .card {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -22,9 +23,17 @@ h1 {
 }
 
 .img_container img {
-	width: 270px;
-	height: 270px;
+	display: block;
+	width: 300px;
+	height: 300px;
 	object-fit: cover;
+}
+.blue_heart {
+	position: absolute;
+	right: 55px;
+	width: 40px;
+	height: 40px;
+	font-size: 2rem;
 }
 .brand {
 	text-transform: uppercase;
