--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -4,7 +4,7 @@ nav.wrapper {
     grid-template-rows: auto;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 30px 0;
     gap: 2em 18px;
 }
 
@@ -28,7 +28,7 @@ nav.wrapper {
 }
 
 .right_nav {
-    grid-column: 8/-1;
+    grid-column: 4/-1;
     grid-row: 2;
     font-size: 30px;
     display: flex;
