--- a/src/pages/Products/products.module.css
+++ b/src/pages/Products/products.module.css
@@ -2,12 +2,6 @@
 
 .products_container {
     display: grid;
-    grid-template-columns: repeat(12, 12fr);
-    grid-template-rows: auto;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 0;
-    gap: 2em 18px;
 }
 .products_hero {
     position: relative;
@@ -18,27 +12,42 @@
     text-align: center;
     text-transform: uppercase;
 }
-.sort_filter p {
+.sort_filter {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     text-transform: uppercase;
+    list-style-type: none;
 }
 .sort_filter .sort {
     margin-left: auto;
+    padding: 15px;
 }
-.sort_filter .sort,
-.sort_filter .filter {
+.sort,
+.filter {
     text-transform: none;
 }
 
-.products_card {
+.mid_section_wrapper {
     display: grid;
-    max-width: 80%;
+    grid-template-columns: repeat(12, 12fr);
+    grid-template-rows: auto;
+    justify-content: center;
+    padding: 30px 0;
+    gap: 2em 18px;
+}
+.sidebar_filters {
+    grid-area: 1/1/-1/3;
+    margin: 3rem auto;
+}
+
+.products_card {
+    grid-area: 1/3/-1/-1;
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 1rem;
-    margin: 5rem auto;
+    grid-gap: 3rem;
+    margin: 3rem 0;
 }
 
 .card {
@@ -57,12 +66,15 @@
     object-fit: cover;
 }
 
-.blue_heart {
+.blue_heart svg {
     position: absolute;
     right: 35px;
     width: 40px;
     height: 40px;
     font-size: 2rem;
+    background-color: var(--background-colour-h1);
+    color: var(--color-h1);
+    padding: 3px;
 }
 
 .brand {
