--- a/src/pages/Products/products.module.css
+++ b/src/pages/Products/products.module.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    gap: 25px;
+    gap: 65px;
     text-transform: uppercase;
     list-style-type: none;
     padding: 0;
@@ -27,6 +27,23 @@
 .sort,
 .filter {
     text-transform: none;
+    cursor: pointer;
+}
+
+.sort_dropdown {
+    position: absolute;
+    z-index: 100;
+    background-color: var(--color-h1);
+    display: none;
+}
+.sort_dropdown p {
+    position: relative;
+    padding: 10px 5px;
+    display: block;
+    cursor: pointer;
+}
+.sort:hover .sort_dropdown {
+    display: block;
 }
 
 .mid_section_wrapper {
