--- a/src/components/Filters/filters.module.css
+++ b/src/components/Filters/filters.module.css
@@ -1,8 +1,10 @@
-.sidebar_filters {
-    grid-column: 1/4;
-    grid-row: auto;
-    margin: 3rem 0;
-    position: relative;
+.filters_products {
+    display: grid;
+    gap: 6px;
+}
+
+.filters_products h4 {
+    margin-bottom: 6px;
 }
 
 label {
@@ -10,12 +12,17 @@ label {
     font-size: 18px;
 }
 
+.products_filter {
+    display: grid;
+    gap: 15px;
+}
+
 /* The custom checkbox container  */
 
 .container_checkbox {
     display: block;
     position: relative;
-    padding-left: 45px;
+    padding-right: 35px;
     cursor: pointer;
     font-size: 1.1rem;
     -webkit-user-select: none;
@@ -33,7 +40,7 @@ label {
 .container_checkbox .checkmark {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     height: 20px;
     width: 20px;
     background-color: #ffff;
