--- a/src/components/Filters/filters.module.css
+++ b/src/components/Filters/filters.module.css
@@ -52,8 +52,8 @@ label {
 }
 
 .container_checkbox input:checked~.checkmark {
-    background-color: var(--color-orange);
-    border: 1px solid var(--color-orange);
+    background-color: var(--primary-colour);
+    border: 1px solid var(--primary-colour);
 }
 
 .container_checkbox .checkmark:after {
