--- a/src/pages/Homepage/homepage.module.css
+++ b/src/pages/Homepage/homepage.module.css
@@ -1,9 +1,3 @@
-:root {
-    --background-colour-h1: rgba(70, 98, 137, 0.9);
-    --color-h1: #fff;
-    --color-orange: #fa6121;
-}
-
 img {
     max-width: 100%;
     height: auto;
@@ -31,10 +25,14 @@ img {
 
 /* SECOND SECTION */
 .brands {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
     align-items: center;
+    gap: 30px;
+    grid-template-columns: repeat(auto-fit,
+            minmax(200px, 1fr));
+    ;
     padding: 50px 0;
 }
 
