--- a/src/components/NewArrivals/newarrivals.module.css
+++ b/src/components/NewArrivals/newarrivals.module.css
@@ -1,15 +1,21 @@
 /* THIS SHOULD BE THE SAME AS FOR PRODUCTS */
-.newArrivals h1 {
-    text-align: center;
-}
-
-.articles {
+.newArrivals .articles {
     display: grid;
-    grid-template-columns: repeat(auto-fit,
-            minmax(250px, 1fr));
-    justify-items: center;
+    grid-template-columns: repeat(auto-fit, 230px);
+    gap: 30px;
+    justify-content: center;
 }
 
-.articles img {
+.newArrivals .articles img {
     max-width: 300px;
+}
+
+.newArrivals h2 {
+    font-size: 16px;
+    font-weight: 300;
+    margin: 6px 0;
+}
+
+.newArrivals span {
+    font-weight: 800;
 }
