--- a/src/components/CategorySections/categorysections.module.css
+++ b/src/components/CategorySections/categorysections.module.css
@@ -1,25 +1,28 @@
 .homepageCategories {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto auto;
     grid-template-rows: auto;
     justify-content: center;
-    justify-items: center;
-    gap: 60px;
+    gap: 15px;
+    padding-bottom: 50px;
 }
 
-.homepageCategories img {
-    width: 500px;
-    max-height: 500px;
+.homepageWrapper img {
+    width: 100%;
+    max-height: 240px;
     object-fit: cover;
-}
-
-.homepageCategories>div {
-    display: flex;
-    flex-direction: column;
 }
 
 @media screen and (min-width: 700px) {
     .homepageCategories {
-        grid-template-columns: auto auto;
+        justify-items: center;
+        gap: 30px;
+        padding-bottom: 100px;
+    }
+
+    .homepageWrapper img {
+        width: calc(200px + 15vw);
+        max-height: calc(200px + 15vw);
+        object-fit: cover;
     }
 }
