--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Mr+Dafoe&family=Tangerine:wght@400;700&display=swap');
+
 :root {
   --h1-size: 2.4em;
   --primary-colour: #FA6121;
