--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -9,10 +9,16 @@ nav.wrapper {
 }
 
 .search_bar {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 50px;
 }
-
+.search_bar_wrapper {
+    z-index: 10;
+}
+input:focus {
+    outline: none;
+    border-color: var(--primary-colour);
+}
 .left_nav {
     grid-row: 2;
     grid-column: 1/2;
@@ -25,6 +31,7 @@ nav.wrapper {
     grid-column: 1/-1;
     grid-row: 1;
     text-align: center;
+    overflow: hidden;
 }
 
 .right_nav {
@@ -35,7 +42,7 @@ nav.wrapper {
     justify-content: flex-end;
 }
 
-.right_nav>* {
+.right_nav > * {
     margin-left: 18px;
 }
 
@@ -46,7 +53,6 @@ nav.wrapper {
 }
 
 @media screen and (min-width: 1000px) {
-
     .left_nav,
     .right_nav {
         grid-row: 1;
