--- a/src/pages/Products/Product/product.module.css
+++ b/src/pages/Products/Product/product.module.css
@@ -25,7 +25,7 @@
 }
 
 .productDetails .sizing svg,
-.productDetails .shopping svg {
+.productDetails .shoppingSVG {
     font-size: 36px;
     padding: 6px;
     border: 1px solid black;
