--- a/src/components/SearchDropdown/searchdropdown.module.css
+++ b/src/components/SearchDropdown/searchdropdown.module.css
@@ -1,8 +1,10 @@
 .dropdown {
+    position: absolute;
+    background-color: var(--color-h1);
     margin-top: 5px;
     padding: 5px;
     width: 190px;
-    height: 150px;
+    height: 200px;
     overflow: hidden;
     overflow-y: auto;
 }
@@ -16,12 +18,12 @@
     display: none;
 }
 
-a {
+.dropdown p {
     text-decoration: none;
     color: black;
     font-size: 14px;
 }
 
-a:hover {
+.dropdown p:hover {
     cursor: pointer;
 }
