--- a/src/pages/Products/Product/product.module.css
+++ b/src/pages/Products/Product/product.module.css
@@ -17,6 +17,10 @@
     font-weight: 300;
 }
 
+.productDetails .sizing {
+    margin: 18px auto;
+}
+
 .productDetails .sizing,
 .productDetails .shopping {
     display: grid;
@@ -26,7 +30,7 @@
 
 .productDetails .sizing svg,
 .productDetails .shoppingSVG {
-    font-size: 36px;
+    font-size: 38px;
     padding: 6px;
     border: 1px solid black;
     color: black;
@@ -37,12 +41,14 @@
     padding: 16px;
     background-color: transparent;
     border: 1px solid black;
+    font-size: 14px;
 }
 
 .productDetails .details {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 6px;
 }
 
 .productDetails .details>* {
@@ -53,4 +59,24 @@
 .productDetails .details svg {
     margin-right: 4px;
     font-size: 20px;
+}
+
+@media screen and (max-width: 900px) {
+    .productDetails {
+        max-width: 500px;
+        margin: auto;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .productDetails {
+        grid-template-columns: auto auto;
+        max-width: none;
+        gap: 20px;
+        margin: 30px 80px;
+    }
+
+    .productDetails img {
+        max-width: 350px;
+    }
 }
