--- a/src/components/Accordion/accordion.module.css
+++ b/src/components/Accordion/accordion.module.css
@@ -1,6 +1,6 @@
 .accordion {
     max-width: 600px;
-    margin: 50px auto;
+    margin: 0 auto;
 }
 
 .accordionTitle {
@@ -22,10 +22,4 @@
 
 .accordionItem {
     border: 1px solid #000;
-}
-
-@media screen and (min-width: 700px) {
-    .accordion {
-        margin: 100px auto;
-    }
 }
