--- a/src/pages/Products/Product/product.module.css
+++ b/src/pages/Products/Product/product.module.css
@@ -66,6 +66,19 @@
     font-size: 20px;
 }
 
+/* FAQ ACCORDION */
+
+.accordion {
+    max-width: 600px;
+    margin: 50px auto;
+}
+
+@media screen and (min-width: 700px) {
+    .accordion {
+        margin: 100px auto;
+    }
+}
+
 @media screen and (max-width: 900px) {
     .productDetails {
         max-width: 500px;
