--- a/src/components/SearchDropdown/searchdropdown.module.css
+++ b/src/components/SearchDropdown/searchdropdown.module.css
@@ -2,13 +2,14 @@
     position: absolute;
     background-color: var(--color-h1);
     margin-top: 5px;
-    padding: 5px;
-    width: 190px;
+    width: auto;
     height: 200px;
     overflow: hidden;
     overflow-y: auto;
 }
-
+.items {
+    width: 190px;
+}
 .dropdown img {
     width: 45px;
     height: auto;
@@ -26,4 +27,9 @@
 
 .dropdown p:hover {
     cursor: pointer;
+}
+@media screen and (min-width: 600px) {
+    .dropdown {
+        width: auto;
+    }
 }
