--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -40,6 +40,10 @@ nav.wrapper {
     margin-left: 18px;
 }
 
+.shoppingBag {
+    position: relative;
+}
+
 @media screen and (min-width: 600px) {
     .search_bar {
         width: auto;
