--- a/src/index.module.css
+++ b/src/index.module.css
@@ -6,13 +6,18 @@
   --white-colour: #fff;
   --background-colour-h1: rgba(70, 98, 137, 0.9);
   --color-h1: #fff;
-  --body-font-size: 14px;
+  --body-font-size: 16px;
 }
 
 body {
   box-sizing: border-box;
   margin: 0 15px;
   font-family: Tahoma, sans-serif;
+  font-size: var(--body-font-size);
+}
+
+p,
+span {
   font-size: var(--body-font-size);
 }
 
