--- a/src/components/Cart/cart.module.css
+++ b/src/components/Cart/cart.module.css
@@ -3,6 +3,7 @@
     width: 300px;
     border: 1px solid #000;
     position: absolute;
+    top: 40px;
     right: 0;
     background: var(--white-colour);
     z-index: 2;
