--- a/src/index.module.css
+++ b/src/index.module.css
@@ -4,6 +4,7 @@
   --h1-size: 2.4em;
   --primary-colour: #FA6121;
   --white-colour: #fff;
+  --black-colour: #000;
   --background-colour-h1: rgba(70, 98, 137, 0.9);
   --color-h1: #fff;
   --body-font-size: 16px;
