--- a/src/components/SearchDropdown/searchdropdown.module.css
+++ b/src/components/SearchDropdown/searchdropdown.module.css
@@ -1,22 +1,37 @@
 .dropdown {
     position: absolute;
+    top: 42px;
     background-color: var(--color-h1);
-    margin-top: 5px;
-    width: auto;
-    height: 200px;
-    overflow: hidden;
-    overflow-y: auto;
+    padding: 18px;
+    z-index: 3;
+    border: 1px solid #000;
+    max-height: 180px;
+    overflow: auto;
 }
+
+input:focus .dropdown {
+    display: block;
+}
+
 .items {
-    width: 190px;
+    width: 200px;
+    color: var(--black-colour);
+    display: flex;
+    align-items: center;
 }
+
+.items:not(:last-child) {
+    margin-bottom: 6px;
+}
+
 .dropdown img {
-    width: 45px;
-    height: auto;
+    width: 60px;
+    margin-right: 6px;
 }
 
 .dropdown::-webkit-scrollbar {
-    display: none;
+    width: 4px;
+    background-color: rgb(192, 190, 190);
 }
 
 .dropdown p {
@@ -28,6 +43,7 @@
 .dropdown p:hover {
     cursor: pointer;
 }
+
 @media screen and (min-width: 600px) {
     .dropdown {
         width: auto;
