--- a/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
+++ b/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
@@ -72,6 +72,10 @@
     object-fit: contain;
 }
 
+.descDetails div p:first-child {
+    margin-bottom: 18px;
+}
+
 @media screen and (min-width: 800px) {
     .shoppingBagWrapper {
         max-width: 800px;
