--- a/src/pages/MenuNav/menu.module.css
+++ b/src/pages/MenuNav/menu.module.css
@@ -19,33 +19,36 @@
 .nav_wrapper,
 .contact_wrapper {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: auto;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: auto; 
     margin-top: 3rem;
 }
-.nav_title {
-    grid-column: 2/3;
+  .menu_sections, .last_section {
+    grid-column: 2/6;
     grid-row: auto;
-    line-height: 0px;
-}
-.menu_sections,
+   padding: 10px;
+  }
+  .menu_sections span{
+    padding: 0px;
+  }
 .contact_info {
-    grid-column: 2/3;
+    grid-column: 2/6;
     grid-row: auto;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
-}
-.about_section {
-    grid-column: 2/3;
-    display: flex;
-    flex-direction: column;
-    background-color: violet;
-}
-
-.contact_info {
-    grid-column: 2/7;
     border: 1px solid var(--black-colour);
     padding: 20px;
+}  
+.contact_info p{
+    flex-wrap: wrap;
+}
+.facebook {
+   width: 180px;
+   height: 50px;
+   background-color: var(--background-colour-h1);  
+   margin-top: 1.5rem; 
+   padding: 5px;
 }
