--- a/src/pages/MenuNav/menu.module.css
+++ b/src/pages/MenuNav/menu.module.css
@@ -4,8 +4,9 @@
     top: 0;
     right: 0;
     width: 100vw;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 500px);
     background-color: var(--white-colour);
+    
 }
 .close {
     position: absolute;
@@ -21,19 +22,21 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: auto; 
-    margin-top: 3rem;
+    margin-top: 3.5rem;
+   
 }
-  .menu_sections, .last_section {
+  .menu_sections, .last_section, .contact_info  {
     grid-column: 2/6;
     grid-row: auto;
-   padding: 10px;
+  
   }
-  .menu_sections span{
-    padding: 0px;
+  .img_component{
+   width: 67%;
+   margin: auto;
+   padding-bottom: -100px;
   }
+ 
 .contact_info {
-    grid-column: 2/6;
-    grid-row: auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -42,8 +45,9 @@
     border: 1px solid var(--black-colour);
     padding: 20px;
 }  
-.contact_info p{
+.nav_wrapper p, .nav_wrapper span, .nav_wrapper h4{
     flex-wrap: wrap;
+    cursor: pointer;
 }
 .facebook {
    width: 180px;
@@ -51,4 +55,7 @@
    background-color: var(--background-colour-h1);  
    margin-top: 1.5rem; 
    padding: 5px;
+}
+.mail a{
+    color: var(--black-colour);
 }
