--- a/src/pages/MenuNav/menu.module.css
+++ b/src/pages/MenuNav/menu.module.css
@@ -11,7 +11,7 @@
 .close {
     position: absolute;
     top: 0;
-    right: 3%;
+    right: 4%;
     font-size: 2rem;
     cursor: pointer;
     color: var(--black-colour);
@@ -31,7 +31,7 @@
   
   }
   .img_component{
-   width: 67%;
+   width: 66.5%;
    margin: auto;
    padding-bottom: -100px;
   }
@@ -50,12 +50,25 @@
     cursor: pointer;
 }
 .facebook {
-   width: 180px;
+   width: 220px;
    height: 50px;
    background-color: var(--background-colour-h1);  
    margin-top: 1.5rem; 
    padding: 5px;
+   color: var(--white-colour);
 }
+.facebook h4{
+   margin: 3px;
+   text-align: center;
+}
+.facebook svg, .hours svg, .adress svg, .mail svg, .phone svg{
+position: relative;
+font-size: 1.8rem;
+  top: 8px;
+ }
+ .hours svg, .adress svg, .mail svg, .phone svg{
+     font-size: 1.4rem;
+ }
 .mail a{
     color: var(--black-colour);
 }
