--- a/src/components/Cart/cart.module.css
+++ b/src/components/Cart/cart.module.css
@@ -7,11 +7,14 @@
     right: 0;
     background: var(--white-colour);
     z-index: 2;
+    height: 300px;
+    overflow: auto;
 }
 
 .cartWrapper h3 {
     text-align: center;
     font-size: 24px;
+    margin-top: 0;
 }
 
 .emptyCart h4 {
@@ -29,14 +32,26 @@
 
 .fullCart {
     display: grid;
-    grid-template-columns: 120px auto;
+    grid-template-columns: 100px auto;
     gap: 12px;
     margin: 18px 0;
+}
+
+.fullCart img {
+    max-width: 100px;
 }
 
 .fullCart .presentation {
     display: flex;
     justify-content: space-between;
+}
+
+.fullCart .presentation h4 {
+    width: 15px;
+}
+
+.fullCart .presentation h5 {
+    white-space: nowrap;
 }
 
 .fullCart h4,
@@ -61,6 +76,24 @@
     justify-content: space-between;
 }
 
-.totalCosts {
+.totalCosts span {
     font-weight: 700;
+    font-size: 14px;
+}
+
+.fullCart .bottomProduct select {
+    background-color: transparent;
+    outline: none;
+    border: 1px solid var(--black-colour);
+    padding: 6px;
+}
+
+.fullCart .bottomProduct button {
+    background-color: transparent;
+    border: none;
+}
+
+.fullCart .bottomProduct button,
+.fullCart .bottomProduct span {
+    color: #9C9C9C;
 }
