--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -41,7 +41,7 @@ nav.wrapper {
     align-items: center;
 }
 
-.right_nav>* {
+.right_nav > * {
     margin-left: 18px;
 }
 
@@ -73,8 +73,7 @@ nav.wrapper {
     }
 
     nav.wrapper {
-        grid-template-areas:
-            "a b c";
+        grid-template-areas: "a b c";
     }
 
     .left_nav,
