--- a/src/components/Buttons/buttons.module.css
+++ b/src/components/Buttons/buttons.module.css
@@ -41,3 +41,17 @@
 button {
     cursor: pointer;
 }
+
+.backButton {
+    padding: 12px;
+    border: 1px solid var(--black-colour);
+    background-color: transparent;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.backButton:hover {
+    background-color: var(--black-colour);
+    color: var(--white-colour);
+}
