--- a/src/index.module.css
+++ b/src/index.module.css
@@ -38,9 +38,13 @@ a {
   text-decoration: none;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1000px) {
   body {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: auto;
+  }
+
+  body>* {
+    margin: 0 30px;
   }
 }
