--- a/src/pages/Checkout/Confirmation/confirmation.module.css
+++ b/src/pages/Checkout/Confirmation/confirmation.module.css
@@ -67,6 +67,12 @@
     white-space: nowrap;
 }
 
+.confirmOrder .confirmButton {
+    max-width: 100%;
+    margin: 18px 0;
+    text-align: center;
+}
+
 @media screen and (min-width: 800px) {
     .confirmOrder {
         max-width: 800px;
