--- a/src/pages/Checkout/OrderProcessed/orderprocessed.module.css
+++ b/src/pages/Checkout/OrderProcessed/orderprocessed.module.css
@@ -6,12 +6,13 @@
     display: flex;
 }
 
-.finalSummary p:nth-child(1),
-.finalSummary p:nth-child(2) {
+.shoppingBag>p:nth-child(1),
+.shoppingBag>p:nth-child(2) {
     font-weight: 700;
 }
 
-.shoppingArticle {
+.shoppingArticle,
+.priceFinalSummary {
     max-width: 230px;
     margin: 36px auto;
     position: relative;
@@ -67,8 +68,43 @@
     max-width: 230px;
 }
 
+.priceFinalSummary table {
+    width: 100%;
+}
+
+.priceFinalSummary table tr td:last-of-type {
+    text-align: right;
+}
+
+.priceFinalSummary .importDuties {
+    text-align: right;
+    font-size: 14px;
+    color: #9C9C9C;
+    margin: 0;
+}
+
+.priceFinalSummary table:last-of-type {
+    margin-top: 12px;
+}
+
+.finalMessage p:last-of-type {
+    margin-top: 0;
+}
+
+.finalSummary p:nth-child(3) {
+    margin-bottom: 0;
+}
+
+.shoppingBag,
+.priceWrapper {
+    border-bottom: 1px solid var(--black-colour);
+}
+
 @media screen and (min-width: 800px) {
-    .shoppingBag {
+
+    .shoppingBag,
+    .priceWrapper,
+    .finalMessage {
         max-width: 800px;
         margin: 30px auto;
     }
@@ -78,9 +114,13 @@
     }
 
     .shoppingArticle {
+        display: flex;
+    }
+
+    .shoppingArticle,
+    .priceFinalSummary {
         max-width: 800px;
         margin: 30px auto;
-        display: flex;
     }
 
     .shoppingArticle img {
@@ -115,5 +155,9 @@
     .shoppingArticle .bagPrice {
         background: none;
         color: var(--black-colour);
+    }
+
+    .priceFinalSummary h1 {
+        text-align: left;
     }
 }
