--- a/src/components/MenuNav/menu.module.css
+++ b/src/components/MenuNav/menu.module.css
@@ -18,16 +18,14 @@
     cursor: pointer;
     color: var(--black-colour);
 }
-.nav_wrapper,
-.contact_wrapper {
+.nav_wrapper {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: auto;
     margin-top: 4rem;
 }
 .menu_sections,
-.last_section,
-.contact_info {
+.last_section {
     grid-column: 2/6;
     grid-row: auto;
 }
@@ -37,7 +35,7 @@
     padding-bottom: -100px;
 }
 
-.contact_info {
+/* .contact_info {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -86,8 +84,8 @@
     font-size: 1.4rem;
 }
 .mail a {
-    color: var(--black-colour);
-}
+    color: var(--black-colour); 
+}*/
 @media screen and (max-width: 699px) {
     .menu {
         height: 250vh;
