--- a/src/components/StoreInfo/storeinfo.module.css
+++ b/src/components/StoreInfo/storeinfo.module.css
@@ -17,17 +17,20 @@
     padding: 20px;
 }
 
-.facebook {
-    width: 220px;
+.facebook h4 {
+    width: max-content;
     height: 50px;
     background-color: var(--background-colour-h1);
-    margin-top: 1.5rem;
     padding: 5px;
     color: var(--white-colour);
-}
-.facebook h4 {
-    margin: 3px;
     text-align: center;
+}
+.about_footer ul {
+    list-style: none;
+    padding: 0;
+}
+.about_footer li {
+    padding: 5px 0;
 }
 .facebook a {
     color: var(--white-colour);
