--- a/src/components/CategorySections/categorysections.module.css
+++ b/src/components/CategorySections/categorysections.module.css
@@ -1,6 +1,6 @@
 .homepageCategories {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     grid-template-rows: auto;
     justify-content: center;
     gap: 15px;
@@ -18,6 +18,7 @@
         justify-items: center;
         gap: 30px;
         padding-bottom: 100px;
+        grid-template-columns: auto auto;
     }
 
     .homepageWrapper img {
