--- a/src/pages/Homepage/homepage.module.css
+++ b/src/pages/Homepage/homepage.module.css
@@ -1,10 +1,5 @@
-img {
-    max-width: 100%;
-    height: auto;
-}
-
 .homepageHero .heading {
-    padding: 40px;
+    padding: 20px;
     background: var(--background-colour-h1);
     color: var(--color-h1);
     position: absolute;
@@ -25,7 +20,8 @@ img {
 }
 
 .homepageHero img {
-    height: 500px;
+    max-width: 750px;
+    min-height: 350px;
     object-fit: cover;
 }
 
@@ -37,7 +33,7 @@ img {
     align-items: center;
     gap: 30px;
     grid-template-columns: repeat(auto-fit,
-            minmax(200px, 1fr));
+            220px);
     ;
     padding: 50px 0;
 }
@@ -58,11 +54,6 @@ img {
         width: min-content;
         min-width: 450px;
     }
-
-    .homepageHero img {
-        height: auto;
-        object-fit: contain;
-    }
 }
 
 @media screen and (min-width: 1000px) {
@@ -73,7 +64,9 @@ img {
     .homepageHero .heading {
         text-align: left;
         left: 0;
+        top: 40%;
         transform: translateX(0);
+        padding: 40px;
     }
 
     .brands {
