--- a/src/components/StoreInfo/storeinfo.module.css
+++ b/src/components/StoreInfo/storeinfo.module.css
@@ -1,72 +1,93 @@
-.contact_info {
+.contact_wrapper {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: auto;
-    margin-top: 0rem;
+    grid-template-columns: repeat(auto-fit, 220px);
+    justify-content: center;
+    gap: 20px;
 }
 
-.contact_wrapper {
-    grid-column: 1/-1;
-    grid-row: auto;
+.contact_wrapper .flex .mail,
+.contact_wrapper .flex .phone,
+.contact_wrapper .flex .address a,
+.contact_wrapper .flex .hours {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: flex-start;
-    justify-content: space-between;
-    border: 1px solid var(--black-colour);
-    padding: 0 10px;
 }
-.facebook {
-    margin-top: 20px;
-    cursor: pointer;
+
+.contact_wrapper .facebook h4,
+.contact_wrapper .facebook h4 a {
+    display: flex;
+    align-items: center;
 }
+
+.contact_wrapper .facebook h4 svg {
+    color: var(--white-colour);
+    font-size: 26px;
+}
+
+.contact_wrapper h4 {
+    margin: 0;
+}
+
+.contact_wrapper p {
+    margin-top: 6px;
+}
+
+.contact_wrapper .facebook h4 a {
+    margin-left: 6px;
+    color: var(--white-colour);
+}
+
 .facebook h4 {
     width: max-content;
     background-color: var(--background-colour-h1);
-    padding: 0 5px 9px 5px;
     color: var(--white-colour);
     text-align: center;
+    padding: 12px;
+    margin-top: 18px;
 }
-.facebook img {
-    margin-top: 0.5rem;
-}
-.about_footer h4 {
-    margin-top: 2.1rem;
-}
+
 .about_footer ul {
     list-style: none;
     padding: 0;
 }
+
 .about_footer li {
-    padding: 3px 0;
+    padding: 4px 0;
 }
-.facebook a {
-    color: var(--white-colour);
-}
-.adress a {
-    color: var(--black-colour);
-}
+
 .facebook svg,
 .phone svg,
 .mail svg,
 .hours svg,
-.adress svg,
+.address svg,
 .mail svg {
-    position: relative;
-    font-size: 1.8rem;
-    top: 8px;
+    font-size: 18px;
+    color: var(--black-colour);
+    margin-right: 4px;
 }
-.facebook h4,
-.phone h4,
-.mail h4,
-.hours h4,
-.adress h4,
-.mail h4,
-.about_footer li {
+
+.address h4 {
     cursor: pointer;
 }
-.adress svg {
-    font-size: 1.7rem;
+
+.address a svg {
+    font-size: 26px;
 }
+
+.address h4,
+.address p {
+    color: var(--black-colour);
+}
+
 .mail a {
     color: var(--black-colour);
+}
+
+
+@media screen and (min-width: 800px) {
+    .contact_wrapper {
+        justify-content: space-between;
+        gap: 30px;
+    }
 }
