--- a/src/pages/MenuNav/menu.module.css
+++ b/src/pages/MenuNav/menu.module.css
@@ -13,40 +13,60 @@ body .menu {
 
 .close {
     position: absolute;
-    top: 1%;
-    right: 4%;
+    top: 15px;
+    right: 15px;
     font-size: 2rem;
     cursor: pointer;
     color: var(--black-colour);
 }
-.nav_wrapper {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: auto;
-    margin-top: 4rem;
+
+.menu .container {
+    padding: 50px;
 }
-.menu_sections,
-.last_section {
-    grid-column: 2/6;
-    grid-row: auto;
+
+.visitImage {
+    margin: 50px 0;
+    padding: 60px;
 }
-.img_component {
-    width: 66.5%;
-    margin: auto;
-    padding-bottom: -100px;
+
+.menuBarInfo {
+    border: 1px solid var(--black-colour);
+    padding: 30px;
+    grid-template-columns: auto;
+    gap: 15px;
 }
 
 @media screen and (max-width: 699px) {
     .menu {
         height: 250vh;
     }
-    .nav_wrapper,
-    .contact_info {
-        margin-top: 5rem;
-    }
 }
+
 @media screen and (min-width: 700px) {
     .menu {
         height: 150vh;
+    }
+
+    .menuBarInfo {
+        grid-template-columns: auto auto auto;
+    }
+}
+
+@media screen and (min-width: 1230px) {
+    .menuBarInfo .flexBox {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    .menuBarInfo {
+        grid-template-columns: 220px 320px 500px;
+    }
+}
+
+@media screen and (min-width: 1300px) {
+
+    .menuBarInfo {
+        grid-template-columns: 200px 350px 520px;
     }
 }
