--- a/src/components/Cart/cart.module.css
+++ b/src/components/Cart/cart.module.css
@@ -7,7 +7,7 @@
     right: 0;
     background: var(--white-colour);
     z-index: 2;
-    height: 300px;
+    max-height: 300px;
     overflow: auto;
 }
 
