--- a/src/components/CategorySections/categorysections.module.css
+++ b/src/components/CategorySections/categorysections.module.css
@@ -13,6 +13,11 @@
     object-fit: cover;
 }
 
+.homepageCategories .categoryBtns {
+    max-width: max-content;
+    margin: 18px auto 0 auto;
+}
+
 @media screen and (min-width: 700px) {
     .homepageCategories {
         justify-items: center;
