Delivery and returns linked.

--- a/src/pages/Products/Product/product.module.css
+++ b/src/pages/Products/Product/product.module.css
@@ -54,6 +54,7 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 6px;
+    cursor: pointer;
 }
 
 .productDetails .details>* {
