Select added to Shopping Bag checkout.

--- a/src/components/Cart/cart.module.css
+++ b/src/components/Cart/cart.module.css
@@ -30,6 +30,10 @@
     text-align: center;
 }
 
+.cartWrapper .shopBagBtn {
+    margin-top: 12px;
+}
+
 .fullCart {
     display: grid;
     grid-template-columns: 100px auto;
