--- a/src/components/StoreInfo/storeinfo.module.css
+++ b/src/components/StoreInfo/storeinfo.module.css
@@ -55,7 +55,6 @@
     padding: 4px 0;
 }
 
-.facebook svg,
 .phone svg,
 .mail svg,
 .hours svg,
@@ -64,6 +63,10 @@
     font-size: 18px;
     color: var(--black-colour);
     margin-right: 4px;
+}
+
+.facebook svg {
+    margin-left: 4px;
 }
 
 .address h4 {
