--- a/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
+++ b/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
@@ -4,6 +4,11 @@
     position: relative;
 }
 
+.shoppingArticle {
+    max-width: max-content;
+    margin: auto;
+}
+
 .shoppingBag h1 {
     text-transform: capitalize;
     margin-top: 0;
@@ -47,6 +52,11 @@
     padding: 6px;
     background-color: var(--primary-colour);
     color: var(--white-colour);
+}
+
+.shoppingArticle .descDetails select {
+    height: max-content;
+    padding: 6px;
 }
 
 .priceSummary {
@@ -96,6 +106,11 @@
     .shoppingBagWrapper {
         max-width: 800px;
         margin: 30px auto;
+    }
+
+    .shoppingArticle {
+        max-width: 100%;
+        margin: 0;
     }
 
     .shoppingBag h1 {
