--- a/src/components/Filters/filters.module.css
+++ b/src/components/Filters/filters.module.css
@@ -83,4 +83,12 @@ label {
     #mobile {
         display: none;
     }
+    .filters_container {
+        position: absolute;
+        background-color: var(--white-colour);
+        opacity: 90%;
+        width: max-content;
+        padding: 0 10px;
+        z-index: 1000;
+    }
 }
