--- a/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
+++ b/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
@@ -20,7 +20,6 @@
 }
 
 .shoppingArticle p span,
-.priceSummary p span,
 .descDetails p:first-child {
     font-weight: 700;
 }
@@ -31,6 +30,7 @@
 
 .shoppingArticle .moveFromCart {
     margin: 18px 0;
+    cursor: pointer;
 }
 
 .shoppingArticle .moveFromCart span {
@@ -52,6 +52,7 @@
     padding: 6px;
     background-color: var(--primary-colour);
     color: var(--white-colour);
+    white-space: nowrap;
 }
 
 .shoppingArticle .descDetails select {
@@ -64,27 +65,10 @@
     margin: auto;
     padding: 30px;
     border: 1px solid var(--black-colour);
-    min-height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
 .priceSummary h2 {
-    font-size: 24px;
     margin-top: 0;
-}
-
-.priceSummary p {
-    display: flex;
-    justify-content: space-between;
-    margin: 6px 0;
-}
-
-.priceSummary .importDuties {
-    justify-content: flex-end;
-    font-size: 14px;
-    color: #9C9C9C;
 }
 
 .priceSummary .submitButton {
@@ -111,6 +95,7 @@
     .shoppingArticle {
         max-width: 100%;
         margin: 0;
+        margin-bottom: 30px;
     }
 
     .shoppingBag h1 {
@@ -183,7 +168,6 @@
     .priceSummary {
         max-width: none;
         width: 240px;
-        height: 500px;
         margin-top: 0;
     }
 }
