--- a/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
+++ b/src/pages/Checkout/ShoppingBag/shoppingbag.module.css
@@ -29,6 +29,16 @@
     margin: 6px 0;
 }
 
+.shoppingArticle .favouritesBag {
+    background: transparent;
+    outline: none;
+    border: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+}
+
 .shoppingArticle .moveFromCart {
     margin: 18px 0;
     cursor: pointer;
