Favourites bag set on navigation.

--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -41,11 +41,12 @@ nav.wrapper {
     align-items: center;
 }
 
-.right_nav > * {
+.right_nav>* {
     margin-left: 18px;
 }
 
-.shoppingBag {
+.shoppingBag,
+.favouritesWrapper {
     position: relative;
 }
 
